[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
alloy = { version = "0.12.5", features = ["full"] }
dotenv = "0.15.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.11.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
reqwest = { version = "0.12.15", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4"] }